# orgbook-publisher-service

./: .gitignore
backend/: config.py
frontend/: config.py  pyproject.toml
frontend/app/: __init__.py
frontend/app/models/: credential_type.py
frontend/app/plugins/: orgook.py  publisher.py  traction.py
frontend/app/routes/admin/: __init__.py  forms.py
frontend/app/routes/auth/: __init__.py
frontend/app/routes/dashboard/: __init__.py  forms.py
frontend/app/routes/errors/: __init__.py
frontend/app/routes/issuer/: __init__.py  forms.py
frontend/app/routes/main/: __init__.py
frontend/app/routes/wallet/: __init__.py
frontend/app/routes/workflows/: __init__.py
frontend/app/static/: manifest.json
frontend/app/static/css/: bcgov.min.css
frontend/app/static/invitations/: 0ba6294f-3404-4f26-84bc-d18cf22b7a7c.json  1faa2f3c-d022-48e4-bd5b-d7215e35fa13.json  22f49e96-8faf-4b49-97c0-9425babc0aec.json  29b48637-6674-4457-98f7-4993ffa6ba29.json  3ce1101d-716a-4a44-a5e9-161da883f968.json  6090119e-36b4-414a-8345-7a7aecebebd1.json  6fe985a5-2344-4a14-bcb9-f86ad1896370.json  760174d1-e3ed-4b8d-9ac0-e20f47964fb7.json  99396709-e4a8-490d-9a13-72c867b6a461.json  9cb7c73e-2021-4079-b5e8-54cada36902d.json  b877fded-fe85-4b02-804b-7051018e9bd1.json  bbf942b3-9ed3-48c5-ba93-7700fdc1c9b4.json  bfe68332-5a6f-4ec3-b4b0-f2baa723590f.json  e30e05c3-90f6-4a74-87a0-c074d2304f11.json  eab74fbd-4d11-41cf-b1bd-e8e754bdf8d6.json  f8a4a5f0-74d7-4e14-8916-2b02ebfc4bb3.json  fae05b04-27d8-4de9-9e03-7799c56b93fc.json
frontend/app/static/js/: credential-handler.js
(+44 files in other folders)
