[tool.poetry]
name = "orgbook-publisher"
version = "0.1.0"
description = ""
authors = ["PatStLouis <patrick.st-louis@opsecid.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-qrcode = "^3.2.0"
ruff = "^0.9.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
